# vut-ifj-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  analysis.c  analysis.h  code_generator.c  code_generator.h  dynamic_array.c  dynamic_array.h  dynamic_string.c  dynamic_string.h  error.h  expression.c  expression.h  ifj17_compiler.c  main.c  rozdeleni  scanner.c  scanner.h  string.c  string.h  symstack.c  symstack.h  symtable.c  symtable.h
doc/: .gitignore  Makefile  czechiso.bst  dokumentace.bib  dokumentace.tex
doc/inc/: FA_graph.vsdx
prezentace/: IFJ_prezentace.tex
prezentace/img/: FIT_barevne_CMYK_CZ.eps  Generovani_kodu.vsdx  Main.vsdx  Parser.vsdx  Scanner.vsdx  Vyrazy.vsdx  Zdrojovy_kod.vsdx
tests/: ifj17.bas  is_it_ok.sh
tests/ic17int_linux64_2017-10-30/: README
tests/ic17int_win64_2017-10-04/: .gitignore  README
tests/ic17int_win64_2017-10-30/: README
